--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -4,6 +4,16 @@ services:
   catalogapi:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_HTTP_PORTS=8080
+      - ASPNETCORE_HTTP_PORTS=80
     ports:
-      - "8080"
+      - "8000:80"
+    depends_on: 
+      - catalogdb
+    container_name: catalogapi 
+
+  catalogdb:
+    container_name: catalogdb
+    ports:
+     - "27017:27017"
+    volumes:
+     - "mongo_data:/data/db"
