--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -18,3 +18,19 @@ services:
      - "27017:27017"
     volumes:
      - "mongo_data:/data/db"
+  
+  basketapi:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_HTTP_PORTS=80
+      - "CacheSettings__ConnectionString=basketdb:6379" 
+    ports:
+      - "8001:80"
+    depends_on:
+     - basketdb
+
+  basketdb:
+   container_name: basketdb
+   ports:
+    - 6379:6379 
+
