--- a/BasketApi/BasketApi.csproj
+++ b/BasketApi/BasketApi.csproj
@@ -11,9 +11,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Grpc.AspNetCore" Version="2.49.0" />
     <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Protobuf Include="..\InventoryGrpc\Protos\Existence.proto" GrpcServices="Client">
+      <Link>Protos\Existence.proto</Link>
+    </Protobuf>
   </ItemGroup>
 
 </Project>
