--- a/BasketApi/appsettings.json
+++ b/BasketApi/appsettings.json
@@ -1,12 +1,15 @@
 {
+  "GrpcSettings": {
+    "HostAddress": "http://localhost:5231"
+  },
   "CacheSettings": {
     "ConnectionString": "localhost:6379"
   },
-    "Logging": {
-      "LogLevel": {
-        "Default": "Information",
-        "Microsoft.AspNetCore": "Warning"
-      }
-    },
-    "AllowedHosts": "*"
-  }
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*"
+}
