--- a/Ordering.Application/Ordering.Application.csproj
+++ b/Ordering.Application/Ordering.Application.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\Ordering.Domain\Ordering.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Behaviors\" />
+  </ItemGroup>
+
 </Project>
