--- a/Ordering.Api/appsettings.json
+++ b/Ordering.Api/appsettings.json
@@ -1,4 +1,12 @@
 {
+  "runtimeOptions": {
+    "configProperties": {
+      "System.Globalization.Invariant": false
+    }
+  },
+  "ConnectionStrings": {
+    "OrderingConnection": "Server=localhost,1433;Database=Order;Encrypt=false;User id=sa;Password=Passw0rd23"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
