--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -34,3 +34,23 @@ services:
    ports:
     - 6379:6379 
 
+
+  inventorygrpc:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_HTTP_PORTS=8080
+      - ASPNETCORE_HTTPS_PORTS=8081
+    ports:
+      - "8080"
+      - "8081"
+    volumes:
+      - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
+      - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
+
+  orderdb:
+   container_name: orderdb
+   environment:
+     SA_PASSWORD: "Passw0rd23"
+     ACCEPT_EULA: "Y"
+   ports:
+     - 1433:1433
