--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,16 @@ services:
   basketdb:
     image: redis:alpine
 
+  inventorygrpc:
+    image: ${DOCKER_REGISTRY-}inventorygrpc
+    build:
+      context: .
+      dockerfile: InventoryGrpc/Dockerfile
+ 
+  orderdb:
+    image: mcr.microsoft.com/mssql/server:2022-latest
+
 volumes:
   mongo_data:
+
 
