--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -54,3 +54,9 @@ services:
      ACCEPT_EULA: "Y"
    ports:
      - 1433:1433
+
+  rabbitmq:
+   container_name: rabbitmq
+   ports:
+    - 5672:5672
+    - 15672:15672 
