--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,9 @@ services:
   orderdb:
     image: mcr.microsoft.com/mssql/server:2022-latest
 
+  rabbitmq:
+   image: rabbitmq:3-management-alpine
+
 volumes:
   mongo_data:
 
