--- a/Ordering.Api/appsettings.json
+++ b/Ordering.Api/appsettings.json
@@ -7,6 +7,9 @@
   "ConnectionStrings": {
     "OrderingConnection": "Server=localhost,1433;Database=Order;Encrypt=false;User id=sa;Password=Passw0rd23"
   },
+  "EventBusSettings": {
+    "HostAddres": "amqp://guest:guest@localhost:5672"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
