--- a/CatalogApi/CatalogApi.csproj
+++ b/CatalogApi/CatalogApi.csproj
@@ -7,6 +7,7 @@
     <InvariantGlobalization>true</InvariantGlobalization>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
+    <Configurations>Debug;Release;DebugConnect</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
