--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,14 @@ services:
   rabbitmq:
    image: rabbitmq:3-management-alpine
 
+  ordering.api:
+    image: ${DOCKER_REGISTRY-}orderingapi
+    build:
+      context: .
+      dockerfile: Ordering.Api/Dockerfile
+
 volumes:
   mongo_data:
+
 
 
