--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -74,3 +74,11 @@ services:
     ports:
       - "8003:80"
 
+
+  authenticationapi:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_HTTP_PORTS=8080
+    ports:
+      - "8080"
+
