--- a/launchSettings.json
+++ b/launchSettings.json
@@ -7,7 +7,8 @@
         "catalogapi": "StartDebugging",
         "basketapi": "StartDebugging",
         "inventorygrpc": "StartDebugging",
-        "ordering.api": "StartDebugging"
+        "ordering.api": "StartDebugging",
+        "authenticationapi": "StartDebugging"
       }
     }
   }
