--- a/AuthenticationApi/appsettings.json
+++ b/AuthenticationApi/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "Identity": {
+    "Key": "vamosaagregArL3UnSup3rPassw0rd!!"
+
+  },
+  "ConnectionStrings": {
+    "AccountConnection": "Server=localhost,1433;Database=Authentication;Encrypt=false;User id=sa;Password=Passw0rd23"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
