--- a/Ordering.Api/appsettings.json
+++ b/Ordering.Api/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "Identity": {
+    "Key": "vamosaagregArL3UnSup3rPassw0rd!!"
+
+  },
   "runtimeOptions": {
     "configProperties": {
       "System.Globalization.Invariant": false
